fix: align items

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+.container {
+    display: flex;
+    justify-content: center;
+}
 
 .grid {
     display: flex;
+
     flex-wrap: wrap;
     height: 300px;
     width: 400px;
